Fixed Toolbox Text Alignment

--- a/wp-content/themes/bb-theme-child/css/main.css
+++ b/wp-content/themes/bb-theme-child/css/main.css
@@ -4016,14 +4016,15 @@ header #sr-header-con .fl-row-content-wrap {
     display: table-cell;
     height: 60px;
     vertical-align: middle; }
-  .learn-more {
+  .home-tool-section-con .learn-more {
     display: table;
-    height: 60px; }
-  .learn-more > div.fl-node-content {
+    height: 60px;
+    width: 100%; }
+  .home-tool-section-con .learn-more > div.fl-node-content {
     display: table-cell;
     height: 60px;
     vertical-align: middle; }
-  .bottom-line {
+  .home-tool-section-con .bottom-line {
     height: 20px; } }
 
 @media screen and (max-width: 500px) {
